# mine-ray

./: .gitignore  CMakeLists.txt  README.md
0x00_direct/: CMakeLists.txt  devicePrograms.cu  main.cpp
0x01_soft/: CMakeLists.txt  devicePrograms.cu  main.cpp
0x02_mirror/: CMakeLists.txt  devicePrograms.cu  main.cpp
0x03_refraction/: CMakeLists.txt  devicePrograms.cu  main.cpp
common/MainWindow/: CMakeLists.txt  CameraWindow.cpp  CameraWindow.h  MainWindow.cpp  MainWindow.h
common/OptixRenderer/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  Model.cpp  Model.h  OptixRenderer.cpp  OptixRenderer.h  optix7.h
common/gdt/cmake/: FindOptiX.cmake
models/cbox_sphere/: CornellBox-Sphere.mtl
models/cbox_water/: CornellBox-Water.mtl
models/trans/: trans.mtl
